--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spacex",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://nocgy.com/spacex/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "compression-webpack-plugin": "^7.1.2"
   }
 }
