--- a/package.json
+++ b/package.json
@@ -39,7 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "compression-webpack-plugin": "^7.1.2"
-  }
+  "devDependencies": {}
 }
