--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spacex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nocgy.com/spacex/",
+  "homepage": "http://spacex.nocgy.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -22,12 +22,6 @@
     "eject": "react-scripts eject",
     "dev": "webpack --mode development",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
